--- a/01_agama/samyukta/01/SA1_151.md
+++ b/01_agama/samyukta/01/SA1_151.md
@@ -7,50 +7,68 @@ previous: SA1_150.html
 next: SA1_152.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 151 (39). Seeds
+<h1><a href='../index.html'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（三九） 種子</th>
+  <th class='en'>151 (39). Seeds</th>
+  <tr>
+    <td title='t99.2.8c26'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus have I heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.8c27'>爾時，世尊告諸比丘： 「有五種種子。 何等為五？ 謂根種子、莖種子、節種子、自落種子、實種子。 此五種子不斷、不壞、不腐、不中風、新熟、堅實。 有地界而無水界，彼種子不生、長、增、廣。 若彼種新熟、堅實、不斷、不壞、不中風。 有水界而無地界，彼種子亦不生、長、增、廣。 若彼種子新熟、堅實、不斷、不壞、不腐、不中風。 有地、水界，彼種子生、長、增、廣。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are five kinds of seeds. What are the five? They are root seeds, stem seeds, joint seeds, seeds that fall naturally, and fruit seeds.<sup id="ref2"><a href="#n2">2</a></sup> Suppose these five seeds aren’t broken, decayed, spoiled, or blown away, newly ripened, and substantial. When earth element is present but not water element, those seeds won’t grow, increase, and develop.<sup id="ref3"><a href="#n3">3</a></sup> Suppose those seeds are newly ripened, substantial, aren’t broken, decayed, or blown away. When the water element is present but not earth element, those seeds also won’t grow, increase, and develop. Suppose those seeds are newly ripened, substantial, aren’t broken, decayed, spoiled, or blown away. When both the earth element and water element are present, then those seeds will grow, increase, and develop.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9a5'>「比丘，彼五種子者，譬取陰俱識。 地界者譬四識住，水界者譬貪、喜四取攀緣識住。 何等為四？ 於色中識住，攀緣色。 喜、貪潤澤，生、長、增、廣。 於受⋯想⋯行中識住，攀緣受⋯想⋯行。 貪、喜潤澤，生、長、增、廣。 比丘，識於中若來、若去、若住、若沒、若生、長、增、廣。</td>
+    <td id='p3'>3. “Monks, those five seeds are analogous to the acquired aggregates together with awareness. The earth element is analogous to the four abodes of awareness, and the water element is analogous to the greed and delight of awareness abiding in those four acquired substrates.<sup id="ref4"><a href="#n4">4</a></sup> What are the four? Awareness abides in form and has form as its substrate. Watered with greed and delight, it arises, grows, increases, and develops. Awareness abides in feeling … conception … volition and has feeling … conception … volition as its substrate. Watered with greed and delight, it arises, grows, increases, and develops. Monks, whether while it’s coming, going, remaining, disappearing, or arising, awareness arises, grows, increases, and develops.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9a11'>「比丘，若離色、受、想、行識有，若來、若去、若住、若生者，彼但有言數。 問已不知，增益生癡，以非境界故。</td>
+    <td id='p4'>4. “Monks, if [someone claims] awareness has come, gone, remained, [ceased,] or arisen apart from form, feeling, conception, and volition, that would only be an assertion. When questioned, they would not know it, and this would increase delusion because it’s something that’s impossible.<sup id="ref5"><a href="#n5">5</a></sup></td>
+  </tr>
+  <tr>
+    <td title='t99.2.9a13'>「色界離貪。 離貪已，於色封滯意生縛斷。 於色封滯意生縛斷已，攀緣斷。 攀緣斷已，識無住處，不復生、長、增、廣。</td>
+    <td id='p5'>5. “Part with greed for the domain of form. After parting with that greed, the mental stagnation in form that produced bondage is ended.<sup id="ref6"><a href="#n6">6</a></sup> After that, the substrate [of form] is ended. After the substrate has ended, awareness has nowhere to dwell, and it doesn’t arise again, grow, increase, or develop.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9a16'>「受、想、行界離貪。 離貪已，於行封滯意生觸斷。 於行封滯意生觸斷已，攀緣斷。 攀緣斷已，彼識無所住，不復生、長、增、廣。</td>
+    <td id='p6'>6. “Part with greed for the domain of feeling … conception … volition. After parting with that greed, the mental stagnation in volition that produced bondage is ended.<sup id="ref6"><a href="#n6">6</a></sup> After that, the substrate [of volition] is ended. After the substrate has ended, awareness has nowhere to dwell, and it doesn’t arise again, grow, increase, or develop.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9a19'>「不生長故，不作行。 不作行已，住。 住已，知足。 知足已，解脫。 解脫已，於諸世間都無所取、無所著。 無所取、無所著已，自覺涅槃： 『我生已盡，梵行已立，所作已作。 自知不受後有。』</td>
+    <td id='p7'>7. “Because it doesn’t arise and grow, volitions aren’t made. Once volitions aren’t made, then one abides. Having abided, one is satisfied. Once one is satisfied, they’re liberated. Once they’re liberated, they grasp nothing and attach to nothing in all the world. Once they grasp nothing and attach to nothing, they realize <em>nirvāṇa</em> for themselves: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9a23'>「我說彼識不至東、西、南、北、四維、上、下。 無所至趣。 唯見法，欲入涅槃、寂滅、清涼、清淨、真實。」</td>
+    <td id='p8'>8. “I say that their awareness doesn’t go east, west, south, north, to the four intercardinals, up, or down.<sup id="ref6"><a href="#n6">6</a></sup> It has no destination to which it goes. When they are about to enter <em>nirvāṇa</em>, it’s truly ceased, quenched, and purified in the present life.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9a25'>佛說此經已，諸比丘聞佛所說，歡喜奉行。</td>
+    <td id='p9'>9. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “There are five kinds of seeds. What are the five? They are root seeds, stem seeds, joint seeds, seeds that fall naturally, and fruit seeds. These five seeds aren’t split, damaged, spoiled, or blown away. They are newly ripened, firm, and substantial. When there’s earth element but no water element, those seeds won’t grow and expand. Suppose those seeds are newly ripened, firm, and substantial, and they aren’t split, damaged, or blown away. When there’s water element but no earth element, those seeds won’t grow and expand, either. Suppose those seeds are newly ripened, firm, and substantial, and they aren’t split, damaged, spoiled, or blown away. When there’s both earth element and water element, those seeds will grow and expand.
-{:#p2}
+<hr/>
 
-3\. “Monks, those five seeds are analogous to the acquired aggregates together with consciousness. The earth element is like the four abodes of consciousness. The water element is like the greed and delight of consciousness abiding in the four acquired substrates.[\[2\]](#n2){:#ref2} What are the four? Consciousness abides in form and has form as its substrate. Soaked with delight and greed, it grows and expands. Consciousness abides in feeling … conception … volition and has feeling … conception … volition as its substrate. Soaked with greed and delight, it grows and expands. Monks, consciousness [abides] in them, whether it’s abiding, disappearing, or growing and expanding in the future or past.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Monks, suppose consciousness exists apart from form, feeling, conception, and volition, whether it’s abiding or arising in the future or past. It would exist only as an assertion. Asking that question while not knowing this will increase someone’s delusion because it’s something that’s unsupported.[\[3\]](#n3){:#ref3}
-{:#p4}
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 39 in the <cite>Taisho</cite> edition and no. 151 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0008c26" target="_blank">T99.2.8c26-9a26</a>). It’s parallel with <a href="https://suttacentral.net/sn22.54" target="_blank">SN 22.54</a>. [<a href="#ref1">back</a>]</li>
+<li id="n2"><em>root seeds, stem seeds, joint seeds, seeds that fall naturally, and fruit seeds.</em> C. 根種子、莖種子、節種子、自落種子、實種子, P. <em>mūlabījaṁ, khandhabījaṁ, aggabījaṁ, phalubījaṁ, bījabījaññeva pañcamaṁ</em>. This list of seeds doesn’t seem to match the version in SN 22.54 entirely. The fourth item, which lit. means “self-falling seeds” would seem to match the last item in Pali, which refers to what we normally think of when we say “seeds.” The last item, 實種子, could mean “real seeds” or “fruit seeds.” The latter makes better sense to me. There isn’t a matching item in the C. list for P. <em>aggabīja</em>, which refers to plants that can grow from cuttings. Clearly, the term <em>bīja</em> is more allegorical, referring to anything from which something will grow, not just literal seeds. [<a href="#ref2">back</a>]</li>
+<li id="n3"><em>grow, increase, and develop.</em> C. 長增廣, P. <em>vuddhiṁ virūḷhiṁ vepullaṁ</em>. This is one of those cases when the C. would be misread without consulting the Indic parallel. The P. gives three verbs that match the C. well if we read the characters individually. Ordinarily, I would read 長增 as equiv. to 增長 (“to grow, enlarge”), and I have to wonder if the translator or editor didn’t purposely transpose 增長 knowing that it would be easily misread as a single term. 廣 typically means “wide, broad, extensive,” but it does often trans. S. <em>vaipulya</em> (P. <em>vepulla</em>). [<a href="#ref3">back</a>]</li>
+<li id="n4"><em>four acquired substrates</em>. C. 四取攀緣. 攀緣 is parallel with P. <em>ārammaṇa</em> (S. <em>ārambaṇa</em>), which means a physical support like a handrail, or a mental support like a sense object. The C. term, however, suggests a verbal meaning “climbing on conditions” or “climbing on something,” evoking the image of vines climbing walls and fences, or someone using political connections to advance themselves. I take the intended meaning here to be like the English “substrate” as something in which things grow. The metaphor of water and earth as the substrates for plant growth indicates this meaning to me.<br/>
+In SN 22.54, the water element is simply delight and attachment (<em>nandirāga</em>). Here, the object of those two things has been added for more specificity. [<a href="#ref4">back</a>]</li>
+<li id="n5"><em>something that’s impossible</em>. C. 非境界. This C. expression could translate terms like S. <em>agocara</em>, <em>aviṣaya</em>, which are both used to means something that is not real or impossible. Lit., they mean “not found anywhere.” [<a href="#ref5">back</a>]</li>
+<li id="n6"><em>the mental stagnation in form that produced bondage is ended</em>. C. 於色封滯意生縛斷, P. <em>vocchijjatārammaṇaṁ patiṭṭhā viññāṇassa na hoti</em>. The C. translates a passage that was different than the P. parallel here. I suspect that 色封滯 translates <em>rūpupaya</em>, which means “attachment” or “getting involved with form.” In C., 封滯 lit. means “blocked, clogged, stagnant,” describing something like a clogged drain that causes a back up of stagnant water. Metaphorically, it means a lack of free flow or movement that leads to stagnation. This, I think, must have been intended as a metaphor for being stuck in or attached to form. [<a href="#ref6">back</a>]</li>
+<li id="n6"><em>the mental stagnation in volition that produced bondage</em>. C. 於行封滯意生觸. The Taisho reading here has “contact” (觸) rather than “bondage” (縛). I’ve followed Yinshun’s amendation in my translation that treats the 觸 reading as an error. The Taisho reading, though, creates an interesting distinction between form and the other three aggregates if we were to accept it as correct. [<a href="#ref6">back</a>]</li>
+<li id="n6"><em>four intercardinals</em>. C. 四維. 維 here trans. a word like S. <em>vidiśa</em>, referring to the directions between the four cardinals (northeast, northwest, southeast, and southwest). Thus, the ten directions are being listed out here. [<a href="#ref6">back</a>]</li>
+</ol>
+<hr/>
 
-5\. “Part with greed for the element of form. After someone parts with that greed, their mental involvement with form that produces bondage is ended. After that, the substrate [of form] is ended. After the substrate is ended, consciousness has nowhere to dwell, and it doesn’t continue to grow and expand.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 25 June 2024</p>
 
-6\. “Part with greed for the element of feeling … conception … volition. After someone parts with that greed, their mental involvement with volition that produces bondage is ended. After that, the substrate [of volition] is ended. After the substrate is ended, consciousness has nowhere to dwell, and it doesn’t continue to grow and expand.
-{:#p6}
-
-7\. “Because it doesn’t grow, volitions aren’t created. Once volitions aren’t created, then one abides. Once one is abiding, they are satisfied. Once they’re satisfied, they’re liberated. Once they’re liberated, they grasp nothing and attach to nothing in all the world. Once they grasp nothing and attach to nothing, they realize nirvāṇa for themselves: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’
-{:#p7}
-
-8\. “I say that that consciousness doesn’t go east, west, south, north, to the four counterpoints, up, or down. There’s no destination to which it goes. When it’s about to enter nirvāṇa, it’s truly ceased, quenched, and purified in the present life.”
-{:#p8}
-
-9\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
-{:#p9}
-
----
-
-### Notes
-
-1. {:#n1} This is <em>sūtra</em> no. 39 in the <cite>Taisho</cite> edition and no. 151 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0008c26" target="_blank">T99.2.8c26-9a26</a>). It’s parallel with [SN 22.54](https://suttacentral.net/sn22.54){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} <em>four acquired substrates</em>. Ch. 四取攀緣. 攀緣 is parallel with P. <em>ārammaṇa</em> and S. <em>ārambaṇa</em>, which means a support or basis for something. The Chinese, however, suggests a verbal meaning “climbing conditions” or “climbing on something,” evoking the image of vines climbing walls and fences. I take the intended meaning to be like the English “substrate” as something in which things grow. The metaphor of water and earth as the substrates for plant growth seems to impart this meaning. [\[back\]](#ref2)
-3. {:#n3} <em>something unsupported</em>. Ch. 非境界, S. <em>anārambaṇa</em>. Literally, the word means “not a support,” used to mean something that’s not an actual thing outside of the human imagination. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 10 November 2023
-{: .revised}
-
----
+<hr/>
