--- a/01_agama/samyukta/01/SA1_152.md
+++ b/01_agama/samyukta/01/SA1_152.md
@@ -1,52 +1,63 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 152 (40). Involvement'
+title: 'The Related Discourses | 1. The Aggregates | 152 (40). Stagnation'
 type: kramdown
 base: ../../../
 previous: SA1_151.html
 next: SA1_153.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 152 (40). Involvement
+<h1><a href='../index.html'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（四〇）封滯</th>
+  <th class='en'>152 (40). Stagnation</th>
+  <tr>
+    <td title='t99.2.9a27'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus have I heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9a28'>爾時，世尊告諸比丘： 「封滯者不解脫，不封滯則解脫。 云何封滯不解脫？ 比丘，攀緣四取陰識住。 云何為四？ 色封滯識住⋯受⋯想⋯行封滯識住⋯</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Someone who is stagnated isn’t liberated, but when they aren’t stagnated, then they are liberated. How is someone stagnated not liberated? Monks, awareness abides in its substrates of four acquired aggregates. What are the four? Awareness abides stagnated in form. Awareness abides stagnated in feeling … conception … volition [as its substrate. Watered with greed and delight, it arises, grows, increases, and develops. Monks, whether while it’s coming, going, remaining, disappearing, or arising, awareness arises, grows, increases, and develops.]<sup id="ref1"><a href="#n1">1</a></sup></td>
+  </tr>
+  <tr>
+    <td title='t99.2.9b2'>「⋯乃至⋯非境界故。 是名封滯，故不解脫。</td>
+    <td id='p3'>3. [“Monks, if someone claims awareness has come, gone, remained, ceased, or arisen apart from form, feeling, conception, and volition, that would only be an assertion. When questioned, they would not know it, and this would increase delusion] because it’s something that’s impossible. This is called someone not being liberated because they are stagnated.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9b3'>「云何不封滯則解脫？ 於色界離貪⋯</td>
+    <td id='p4'>4. “How is someone who isn’t stagnated then liberated? Part with greed for the domain of form. [After parting with that greed, the mental stagnation in form that produced bondage is ended. After that, the substrate of form is ended. After the substrate has ended, awareness has nowhere to dwell, and it doesn’t arise again, grow, increase, or develop.]</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9b4'>「受⋯想⋯行⋯識離貪⋯</td>
+    <td id='p5'>5. “Part with greed for the domain of feeling … conception … volition. [After parting with that greed, the mental stagnation in volition that produced bondage is ended. After that, the substrate of volition is ended. After the substrate has ended, awareness has nowhere to dwell, and it doesn’t arise again, grow, increase, or develop.]</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9b4'></td>
+    <td id='p6'>6. [“Because it doesn’t arise and grow, volitions aren’t made. Once volitions aren’t made, then one abides. Having abided, one is satisfied. Once one is satisfied, they’re liberated. Once they’re liberated, they grasp nothing and attach to nothing in all the world. Once they grasp nothing and attach to nothing, they realize <em>nirvāṇa</em> for themselves: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’]</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9b4'>「⋯乃至⋯清淨真實。 是則不封滯則解脫。」</td>
+    <td id='p7'>7. [“I say that their awareness doesn’t go east, west, south, north, to the four intercardinals, up, or down. It has no destination to which it goes. When they are about to enter <em>nirvāṇa</em>, it’s truly ceased, quenched, and] purified in the present life. This is someone being liberated because they are not stagnated.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9b5'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
+    <td id='p8'>8. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “Someone involved isn’t liberated, but when they aren’t involved, then they are liberated. How is someone involved not liberated? Monks, consciousness abides in its substrates of four acquired aggregates. What are the four? Consciousness abides involved with form. Consciousness abides involved with feeling … conception … volition [as its substrate. Soaked with greed and delight, it grows and expands. Monks, consciousness (abides) in them, whether it’s abiding, disappearing, or growing and expanding in the future or past.] [\[2\]](#n2){:#ref2}
-{:#p2}
+<hr/>
 
-3\. [“Monks, suppose consciousness exists apart from form, feeling, conception, and volition, whether it’s abiding or arising in the future or past. It would exist only as an assertion. Asking that question while not knowing this will increase someone’s delusion] because it’s something that’s unsupported. This is called someone not being liberated because they are involved.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. [“How is someone who isn’t involved then liberated? Parting with greed for the element of form, [their mental involvement with form that produces bondage is ended. After that, the substrate (of form) is ended. After the substrate is ended, consciousness has nowhere to dwell, and it doesn’t continue to grow and expand.]
-{:#p4}
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 40 in the <cite>Taisho</cite> edition and no. 152 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0009a27" target="_blank">T99.2.9a27-b6</a>). It’s similar to <a href="SA1_151.html" target="_blank">SĀ 1.151</a> and <a href="https://suttacentral.net/sn22.53" target="_blank">SN 22.53</a> but simpler and with less emphasis on stagnation. See the notes to SĀ 1.151 for comments on keywords found in this <em>sūtra</em>. [<a href="#ref1">back</a>]</li>
+<li id="n1">The passages in brackets were abbreviated in the Chinese translation. I’ve expanded these abbreviations with the corresponding passages from the previous <em>sūtra</em> (SĀ 1.151). [<a href="#ref1">back</a>]</li>
+</ol>
+<hr/>
 
-5\. “Parting with greed for the element of feeling … conception … volition, [their mental involvement with volition that produces bondage is ended. After that, the substrate (of volition) is ended. After the substrate is ended, consciousness has nowhere to dwell, and it doesn’t continue to grow and expand.]
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 25 June 2024</p>
 
-6\. [“Because it doesn’t grow, volitions aren’t created. Once volitions aren’t created, then one abides. Once one is abiding, they are satisfied. Once they’re satisfied, they’re liberated. Once they’re liberated, they grasp nothing and attach to nothing in all the world. Once they grasp nothing and attach to nothing, they realize nirvāṇa for themselves: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’]
-{:#p6}
-
-7\. [“I say that that consciousness doesn’t go east, west, south, north, to the four counterpoints, up, or down. There’s no destination to which it goes. When it’s about to enter nirvāṇa, it’s truly ceased, quenched, and] purified in the present life. This is someone being liberated because they are not involved.”
-{:#p7}
-
-8\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
-{:#p8}
-
----
-
-### Notes
-
-1. {:#n1} This is <em>sūtra</em> no. 40 in the <cite>Taisho</cite> edition and no. 152 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0009a27" target="_blank">T99.2.9a27-b6</a>). It’s similar to [SĀ 1.151](SA1_151.html){:target="_blank"} and [SN 22.53](https://suttacentral.net/sn22.53){:target="_blank"} but simpler and with less emphasis on involvement. [\[back\]](#ref1)
-2. {:#n2} The passages in brackets were abbreviated in the original Chinese. I’ve expanded the abbreviations with the corresponding passages from the previous sūtra, SĀ 1.151. [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 17 October 2022
-{: .revised}
-
----
+<hr/>
