--- a/01_agama/samyukta/01/SA1_153.md
+++ b/01_agama/samyukta/01/SA1_153.md
@@ -7,121 +7,166 @@ previous: SA1_152.html
 next: SA1_158.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 153 (41). Five Turns
+<h1><a href='../index.html'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（四一）五轉</th>
+  <th class='en'>153 (41). Five Turns</th>
+  <tr>
+    <td title='t99.2.9b7'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus have I heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9b8'>爾時，世尊告諸比丘： 「有五受陰：色受陰⋯受⋯想⋯行⋯識受陰。 我於此五受陰五種如實知：色如實知⋯色集⋯色味⋯色患⋯色離如實知。 如是，受⋯想⋯行⋯識如實知⋯識集⋯識味⋯識患⋯識離如實知。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are five acquired aggregates: the acquired aggregate of form … feeling … conception … volition … the acquired aggregate of awareness. I truly know these five acquired aggregates in five ways: I truly know form … form’s formation … form’s enjoyment … form’s trouble … truly know form’s escape. Thus, I truly know feeling … conception … volition … awareness … awareness’ formation … awareness’ enjoyment … awareness’ trouble … truly know awareness’ escape.</td>
+  </tr>
+<tr>
+  <td title='t99.2.9b12'></td>
+  <td class='subheading'>Form</td>
+</tr>
+  <tr>
+    <td title='t99.2.9b12'>「云何色如實知？ 諸所有色，一切四大及四大造色，是名色。 如是，色如實知。</td>
+    <td id='p3'>3. “How is form truly known? All the forms that exist are all four basic elements and forms made of the four basic elements are called form. Form is thus truly known.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9b13'>「云何色集如實知？ 於色喜、愛是名色集。 如是，色集如實知。</td>
+    <td id='p4'>4. “How is form’s formation truly known? Delight and craving for form are called form’s formation. Form’s formation is thus truly known.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9b15'>「云何色味如實知？ 謂色因緣生喜、樂是名色味。 如是，色味如實知。</td>
+    <td id='p5'>5. “How is form’s enjoyment truly known? Delight and pleasure that arise dependent on form are called form’s enjoyment. Form’s enjoyment is thus truly known.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9b16'>「云何色患如實知？ 若色無常、苦、變易法，是名色患。 如是，色患如實知。</td>
+    <td id='p6'>6. “How is form’s trouble truly known? When form is impermanent, painful, and liable to change, this is called form’s trouble. Form’s trouble is thus truly known.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9b18'>「云何色離如實知？ 若於色調伏欲貪、斷欲貪、越欲貪，是名色離。 如是，色離如實知。</td>
+    <td id='p7'>7. “How is form’s escape truly known? When desire for form is controlled, stopped, and transcended, this is called form’s escape. Form’s escape is thus truly known.</td>
+  </tr>
+<tr>
+  <td title='t99.2.9b20'></td>
+  <td class='subheading'>Feeling</td>
+</tr>
+  <tr>
+    <td title='t99.2.9b20'>「云何受如實知？ 有六受身：眼觸生受⋯耳⋯鼻⋯舌⋯身⋯意觸生受。 是名受。 如是，受如實知。</td>
+    <td id='p8'>8. “How is feeling truly known? There is the body of six feelings: feeling that arises from visual contact … auditory … olfactory … gustatory … somatic … feeling that arises from mental contact. This is called feeling. Feeling is thus truly known.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9b22'>「云何受集如實知？ 觸集是受集。 如是，受集如實知。</td>
+    <td id='p9'>9. “How is feeling’s formation truly known? The formation of contact is feeling’s formation. Feeling’s formation is thus truly known.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9b23'>「云何受味如實知？ 緣六受生喜、樂，是名受味。 如是，受味如實知。</td>
+    <td id='p10'>10. “How is feeling’s enjoyment truly known? Delight and pleasure that arise dependent on the six feelings are called feeling’s enjoyment. Feeling’s enjoyment is thus truly known.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9b24'>「云何受患如實知？ 若受無常、苦、變易法，是名受患。 如是，受患如實知。</td>
+    <td id='p11'>11. “How is feeling’s trouble truly known? When feeling is impermanent, painful, and liable to change, this is called feeling’s trouble. Feeling’s trouble is thus truly known.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9b26'>「云何受離如實知？ 於受調伏欲貪、斷欲貪、越欲貪，是名受離。 如是，受離如實知。</td>
+    <td id='p12'>12. “How is feeling’s escape truly known? When desire for feeling is controlled, stopped, and transcended, this is called feeling’s escape. Feeling’s escape is thus truly known.</td>
+  </tr>
+<tr>
+  <td title='t99.2.9b28'></td>
+  <td class='subheading'>Conception</td>
+</tr>
+  <tr>
+    <td title='t99.2.9b28'>「云何想如實知？ 謂六想身。 云何為六？ 謂眼觸生想⋯耳⋯鼻⋯舌⋯身⋯意觸生想。 是名想。 如是，想如實知。</td>
+    <td id='p13'>13. “How is conception truly known? There’s the body of six conceptions. What are the six? They are conceptions that arise from visual contact … auditory … olfactory … gustatory … somatic … and conceptions that arise from mental contact. This is called conception. Conception is thus truly known.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9c1'>「云何想集如實知？ 謂觸集是想集。 如是，想集如實知。</td>
+    <td id='p14'>14. “How is conception’s formation truly known? The formation of contact is conception’s formation. Conception’s formation is thus truly known.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9c2'>「云何想味如實知？ 想因緣生喜樂是名想味。 如是，想味如實知。</td>
+    <td id='p15'>15. “How is conception’s enjoyment truly known? Delight and pleasure that arise dependent on conception are called conception’s enjoyment. Conception’s enjoyment is thus truly known.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9c4'>「云何想患如實知？ 謂想無常、苦、變易法是名想患。 如是，想患如實知。</td>
+    <td id='p16'>16. “How is conception’s trouble truly known? When conception is impermanent, painful, and liable to change, this is called conception’s trouble. Conception’s trouble is thus truly known.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9c5'>「云何想離如實知？ 若於想調伏欲貪、斷欲貪、越欲貪，是名想離。 如是，想離如實知。</td>
+    <td id='p17'>17. “How is conception’s escape truly known? When desire for conception is controlled, stopped, and transcended, this is called conception’s escape. Conception’s escape is thus truly known.</td>
+  </tr>
+<tr>
+  <td title='t99.2.9c7'></td>
+  <td class='subheading'>Volition</td>
+</tr>
+  <tr>
+    <td title='t99.2.9c7'>「云何行如實知？ 謂六思身：眼觸生思⋯耳⋯鼻⋯舌⋯身⋯意觸生思。 是名為行。 如是，行如實知。</td>
+    <td id='p18'>18. “How is volition truly known? There’s the body of six intentions: intentions that arise from visual contact … auditory … olfactory … gustatory … somatic … and intentions that arises from mental contact. This is called volition. Volition is thus truly known.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9c9'>「云何行集如實知？ 觸集是行集。 如是，行集如實知。</td>
+    <td id='p19'>19. “How is volition’s formation truly known? The formation of contact is volition’s formation. Volition’s formation is thus truly known.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9c11'>「云何行味如實知？ 謂行因緣生喜樂，是名行味。 如是，行味如實知。</td>
+    <td id='p20'>20. “How is volition’s enjoyment truly known? Delight and pleasure that arise dependent on volition are called volition’s enjoyment. Volition’s enjoyment is thus truly known.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9c12'>「云何行患如實知？ 若行無常、苦、變易法，是名行患。 如是，行患如實知。</td>
+    <td id='p21'>21. “How is volition’s trouble truly known? When volition is impermanent, painful, and liable to change, this is called volition’s trouble. Volition’s trouble is thus truly known.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9c14'>「云何行離如實知？ 若行調伏欲貪、斷欲貪、越欲貪，是名行離。 如是，行離如實知。</td>
+    <td id='p22'>22. “How is volition’s escape truly known? When desire for volition is controlled, stopped, and transcended, this is called volition’s escape. Volition’s escape is thus truly known.</td>
+  </tr>
+<tr>
+  <td title='t99.2.9c16'></td>
+  <td class='subheading'>Awareness</td>
+</tr>
+  <tr>
+    <td title='t99.2.9c16'>「云何識如實知？ 謂六識身：眼識身，耳、鼻、舌、身、意識身。 是名為識身。 如是，識身如實知。</td>
+    <td id='p23'>23. “How is awareness truly known? There are six bodies of awareness: the body of visual awareness … auditory … olfactory … gustatory … somatic … and the body of mental awareness. These are called the bodies of awareness. The bodies of awareness are thus truly known.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9c18'>「云何識集如實知？ 謂名色集是名識集。 如是，識集如實知。</td>
+    <td id='p24'>24. “How is awareness’ formation truly known? The formation of name and form is called awareness’ formation. Awareness’ formation is thus truly known.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9c19'>「云何識味如實知？ 識因緣生喜樂是名識味。 如是，識味如實知。</td>
+    <td id='p25'>25. “How is awareness’ enjoyment truly known? Delight and pleasure that arise dependent on awareness are called awareness’ enjoyment. Awareness’ enjoyment is thus truly known.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9c21'>「云何識患如實知？ 若識無常、苦、變易法，是名識患。 如是，識患如實知。</td>
+    <td id='p26'>26. “How is awareness’ trouble truly known? When awareness is impermanent, painful, and liable to change, this is called awareness’ trouble. Awareness’ trouble is thus truly known.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9c22'>「云何識離如實知？ 謂於識調伏欲貪、斷欲貪、越欲貪，是名識離。 如是，識離如實知。</td>
+    <td id='p27'>27. “How is awareness’ escape truly known? When desire for awareness is controlled, stopped, and transcended, this is called awareness’ escape. Awareness’ escape is thus truly known.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.9c24'>「比丘，若沙門、婆羅門於色如是知、如是見，如是知、如是見，離欲向，是名正向。 若正向者，我說彼入。 受、想、行、識亦復如是。</td>
+    <td id='p28'>28. “Monks, if an ascetic or priest knows and sees form in this way and thus knows and sees the way to part with desire, this is called the correct heading. If someone is correctly headed, I say that they have entered. <em>Feeling, conception, volition, and awareness are likewise.</em></td>
+  </tr>
+  <tr>
+    <td title='t99.2.9c27'>「若沙門、婆羅門於色如實知、如實見，於色生厭。 離欲，不起諸漏，心得解脫。 若心得解脫者，則為純一。 純一者，則梵行立。 梵行立者，離他自在。 是名苦邊。 受、想、行、識亦復如是。」</td>
+    <td id='p29'>29. “If an ascetic or priest truly knows and sees form, then disillusionment with form arises. Parting with desire for it, they don’t produce the contaminants, and the mind becomes liberated. If someone’s mind becomes liberated, then it becomes consistent. It being consistent, the religious life is established. Someone established in the religious life is free of another’s control. This is called the end of suffering. <em>Feeling, conception, volition, and awareness is likewise.</em>”<sup id="ref2"><a href="#n2">2</a></sup></td>
+  </tr>
+  <tr>
+    <td title='t99.2.10a2'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
+    <td id='p30'>30. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “There are five acquired aggregates: The acquired aggregate of form … feeling … conception … volition … the acquired aggregate of consciousness. I truly know these five acquired aggregates in five ways: I truly know form … form’s formation … form’s enjoyment … form’s trouble … truly know form’s escape. Thus, I truly know feeling … conception … volition … consciousness … consciousness’s formation … consciousness’s enjoyment … consciousness’s trouble … truly know consciousness’s escape.
-{:#p2}
+<hr/>
 
-#### Form
+<h3 id="notes">Notes</h3>
 
-3\. “How is form truly known? All forms that exist, all four elements and forms made of the four elements, are called form. Form is thus truly known.
-{:#p3}
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 41 in the <cite>Taisho</cite> edition and no. 153 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0009b07" target="_blank">T99.2.9b7-10a3</a>). It similar to <a href="https://suttacentral.net/sn22.56" target="_blank">SN 22.56</a>, but the analysis of the five aggregates is different. Here, each aggregate is defined in terms of its formation, enjoyment, trouble, and escape. In SN 22.56, each is discussed in terms of formation, cessation, and the path to its cessation. Beyond this difference, however, the content of the two discourses is nearly identical, so we could regard them both as two variants of the same <em>sūtra</em>. [<a href="#ref1">back</a>]</li>
+<li id="n2">In SN 22.56, a similar conclusion is repeated after each aggregate is analyzed. It would appear that 正向 (“correct heading”) corresponds with P. <em>suppaṭipannā</em> (“skillful way of proceeding” or “gone the right way”). Presumably “entered” translated a word like P. <em>āpanna</em> and refers to entering the stream.<br/>
+Both conclusions mention disillusionment and lack of desire, but this version doesn’t mention cessation even though it typically goes along with these things in a series. Instead, they culminate directly in liberation, freedom, and the end of suffering. In SN 22.56, cessation and the end of rebirth is the end result. [<a href="#ref2">back</a>]</li>
+</ol>
+<hr/>
 
-4\. “How is form’s formation truly known? Delight and craving for form are called form’s formation. Form’s formation is thus truly known.
-{:#p4}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 25 June 2024</p>
 
-5\. “How is form’s enjoyment truly known? Delight and pleasure that dependently arise from form are called form’s enjoyment. Form’s enjoyment is thus truly known.
-{:#p5}
-
-6\. “How is form’s trouble truly known? When form is impermanent, painful, and liable to change, this is called form’s trouble. Form’s trouble is thus truly known.
-{:#p6}
-
-7\. “How is form’s escape truly known? When desire for form is controlled, stopped, and transcended, this is called form’s escape. Form’s escape is thus truly known.
-{:#p7}
-
-#### Feeling
-
-8\. “How is feeling truly known? There is the body of six feelings: Feeling that arises from eye contact … ear … nose … tongue … body … feeling that arises from mind contact. This is called feeling. Feeling is thus truly known.
-{:#p8}
-
-9\. “How is feeling’s formation truly known? The formation of contact is feeling’s formation. Feeling’s formation is thus truly known.
-{:#p9}
-
-10\. “How is feeling’s enjoyment truly known? Delight and pleasure that dependently arise from the six feelings are called feeling’s enjoyment. Feeling’s enjoyment is thus truly known.
-{:#p10}
-
-11\. “How is feeling’s trouble truly known? When feeling is impermanent, painful, and liable to change, this is called feeling’s trouble. Feeling’s trouble is thus truly known.
-{:#p11}
-
-12\. “How is feeling’s escape truly known? When desire for feeling is controlled, stopped, and transcended, this is called feeling’s escape. Feeling’s escape is thus truly known.
-{:#p12}
-
-#### Conception
-
-13\. “How is conception truly known? There’s the body of six conceptions. What are the six? They are conception that arises from eye contact … ear … nose … tongue … body … conception that arises from mind contact. This is called conception. Conception is thus truly known.
-{:#p13}
-
-14\. “How is conception’s formation truly known? The formation of contact is conception’s formation. Conception’s formation is thus truly known.
-{:#p14}
-
-15\. “How is conception’s enjoyment truly known? Delight and pleasure that dependently arise from conception are called conception’s enjoyment. Conception’s enjoyment is thus truly known.
-{:#p15}
-
-16\. “How is conception’s trouble truly known? When conception is impermanent, painful, and liable to change, this is called conception’s trouble. Conception’s trouble is thus truly known.
-{:#p16}
-
-17\. “How is conception’s escape truly known? When desire for conception is controlled, stopped, and transcended, this is called conception’s escape. Conception’s escape is thus truly known.
-{:#p17}
-
-#### Volition
-
-18\. “How is volition truly known? There’s the body of six intentions: Intention that arises from eye contact … ear … nose … tongue … body, and intention that arises from mind contact. This is called volition. Volition is thus truly known.
-{:#p18}
-
-19\. “How is volition’s formation truly known? The formation of contact is volition’s formation. Volition’s formation is thus truly known.
-{:#p19}
-
-20\. “How is volition’s enjoyment truly known? Delight and pleasure that dependently arise from volition are called volition’s enjoyment. Volition’s enjoyment is thus truly known.
-{:#p20}
-
-21\. “How is volition’s trouble truly known? When volition is impermanent, painful, and liable to change, this is called volition’s trouble. Volition’s trouble is thus truly known.
-{:#p21}
-
-22\. “How is volition’s escape truly known? When desire for volition is controlled, stopped, and transcended, this is called volition’s escape. Volition’s escape is thus truly known.
-{:#p22}
-
-#### Consciousness
-
-23\. “How is consciousness truly known? There’s the six bodies of consciousnesses: The body of eye consciousness … ear … nose … tongue … body … the body of mind consciousness. This is called the bodies of consciousness. The bodies of consciousness are thus truly known.
-{:#p23}
-
-24\. “How is consciousness’s formation truly known? The formation of name and form is called consciousness’s formation. Consciousness’s formation is thus truly known.
-{:#p24}
-
-25\. “How is consciousness’s enjoyment truly known? Delight and pleasure that dependently arise from consciousness are called consciousness’s enjoyment. Consciousness’s enjoyment is thus truly known.
-{:#p25}
-
-26\. “How is consciousness’s trouble truly known? When consciousness is impermanent, painful, and liable to change, this is called consciousness’s trouble. Consciousness’s trouble is thus truly known.
-{:#p26}
-
-27\. “How is consciousness’s escape truly known? When desire for consciousness is controlled, stopped, and transcended, this is called consciousness’s escape. Consciousness’s escape is thus truly known.
-{:#p27}
-
-28\. “Monks, if an ascetic or priest knows and sees form in this way and knows and sees the way to part with desire for it in this way, this is called the correct heading. If someone is correctly headed, I say that they have entered. <em>Feeling, conception, volition, and consciousness are likewise.</em>
-{:#p28}
-
-29\. “If an ascetic or priest truly knows and sees form, then disillusionment with form arises. Parting with desire for it, they don’t produce contaminants, and the mind becomes liberated. If someone’s mind becomes liberated, then it’s consistent. It being consistent, the religious life is established. Someone established in the religious life is free of another’s control. This is called the end of suffering. <em>Feeling, conception, volition, and consciousness is likewise.</em>”
-{:#p29}
-
-30\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
-{:#p30}
-
----
-
-### Notes
-
-1. {:#n1} This is <em>sūtra</em> no. 41 in the <cite>Taisho</cite> edition and no. 153 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0009b07" target="_blank">T99.2.9b7-10a3</a>). It’s parallel with [SN 22.56](https://suttacentral.net/sn22.56){:target="_blank"}. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 10 November 2023
-{: .revised}
-
----
+<hr/>
