Added MA 41 & 92, various other minor corrections

--- a/01_agama/madhyama/MA_001.md
+++ b/01_agama/madhyama/MA_001.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Medium Discourses | Chapter 1: Sevens | 1. The Good Dharma'
+title: 'The Medium Discourses | Chapter 1: The Sevens | 1. The Good Dharma'
 type: kramdown
 base: ../../../
 previous: index.html
