--- a/01_agama/madhyama/MA_005.md
+++ b/01_agama/madhyama/MA_005.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Medium Discourses | Chapter 1: Sevens | 5. The Wood Pile Parable'
+title: 'The Medium Discourses | Chapter 1: The Sevens | 5. The Wood Pile Parable'
 type: kramdown
 base: ../../../
 previous: MA_004.html
@@ -8,7 +8,7 @@ next: MA_006.html
 ---
 
 # [The Medium Discourses](index.html)
-## Chapter 1: Sevens
+## Chapter 1: The Sevens
 ### 5. The Wood Pile Parable
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to Kośala and stayed among the people there. He traveled with a large assembly of monks and followers.
