--- a/01_agama/madhyama/MA_006.md
+++ b/01_agama/madhyama/MA_006.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "The Medium Discourses | Chapter 1: Sevens | 6. The Good Person’s Departure"
+title: "The Medium Discourses | Chapter 1: The Sevens | 6. The Good Person’s Departure"
 type: kramdown
 base: ../../../
 previous: MA_005.html
@@ -8,7 +8,7 @@ next: MA_007.html
 ---
 
 # [The Medium Discourses](index.html)
-## Chapter 1: Sevens
+## Chapter 1: The Sevens
 ### 6. The Good Person’s Departure
 
 1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.
