--- a/01_agama/madhyama/MA_012.md
+++ b/01_agama/madhyama/MA_012.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Medium Discourses | 2. Related to Deeds | 12. Vāṣpa'
+title: 'The Medium Discourses | Chapter 2: Related to Deeds | 12. Vāṣpa'
 type: kramdown
 base: ../../../
 previous: MA_011.html
@@ -8,7 +8,7 @@ next: MA_015.html
 ---
 
 <h1><a href='index.html'>The Medium Discourses</a></h1>
-<h2>2: Related to Deeds</h2>
+<h2>Chapter 2: Related to Deeds</h2>
 
 <table class="trans">
   <th class='ch'>（一二） 中阿含業相應品惒破經第二 (惒乎過反) (初一日誦)</th>
