--- a/01_agama/madhyama/MA_056.md
+++ b/01_agama/madhyama/MA_056.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Medium Discourses | 5. Related to Cultivation | 56. Meghiya'
+title: 'The Medium Discourses | Chapter 5: Related to Cultivation | 56. Meghiya'
 type: kramdown
 base: ../../../
 previous: MA_055.html
