--- a/01_agama/madhyama/MA_153.md
+++ b/01_agama/madhyama/MA_153.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Medium Discourses | Chapter 12: Priests | 153. Sugandika'
+title: 'The Medium Discourses | Chapter 12: The Brahmins | 153. Sugandika'
 type: kramdown
 base: ../../
 previous: MA_146.html
@@ -8,7 +8,7 @@ next: MA_176.html
 ---
 
 # [The Medium Discourses](index.html)
-## Chapter 12: Priests
+## Chapter 12: The Brahmins
 ### 153. Sugandika
 
 #### Introduction
