--- a/01_agama/madhyama/MA_176.md
+++ b/01_agama/madhyama/MA_176.md
@@ -207,7 +207,7 @@ next: MA_186.html
 ---
 
 ### Notes
-1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0713c21" target="_blank">T26.1.713c21-6b11</a>. The Pali parallel to this <em>sūtra</em> is <a href="https://suttacentral.net/mn44" target="_blank">MN 44</a>. [\[back\]](#ref1)
+1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0713c21" target="_blank">T26.1.713c21-6b11</a>. There is no Pali parallel that I’m aware of. [\[back\]](#ref1)
 
 ---
 
