--- a/01_agama/madhyama/MA_204.md
+++ b/01_agama/madhyama/MA_204.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Medium Discourses | Chapter 17: Potalaka | 204. Raṃbhaka'
+title: 'The Medium Discourses | Chapter 17: Potaliya | 204. Raṃbhaka'
 type: kramdown
 base: ../../../
 previous: MA_200.html
@@ -8,7 +8,7 @@ next: MA_210.html
 ---
 
 # [The Medium Discourses](index.html)
-## Chapter 17: Potalaka
+## Chapter 17: Potaliya
 ### 204. Raṃbhaka
 
 1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Mṛgāramātu Monastery in the Eastern Park.
