--- a/01_agama/madhyama/MA_210.md
+++ b/01_agama/madhyama/MA_210.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Medium Discourses | Chapter 17: Potalaka | 210. The Nun Dharmadinnā'
+title: 'The Medium Discourses | Chapter 17: Potaliya | 210. The Nun Dharmadinnā'
 type: kramdown
 base: ../../../
 previous: MA_204.html
@@ -8,7 +8,7 @@ next: index.html
 ---
 
 # [The Medium Discourses](index.html)
-## Chapter 17: Potalaka
+## Chapter 17: Potaliya
 ### 210. The Nun Dharmadinnā
 
 1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.
