--- a/01_agama/madhyama/MA_002.md
+++ b/01_agama/madhyama/MA_002.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Medium Discourses | The Sevens | 2. The Pārijāta Tree'
+title: 'The Medium Discourses | Chapter 1: The Sevens | 2. The Pārijāta Tree'
 type: kramdown
 base: ../../../
 previous: MA_001.html
@@ -8,7 +8,7 @@ next: MA_003.html
 ---
 
 # [The Medium Discourses](index.html)
-## The Sevens
+## Chapter 1: The Sevens
 ### 2. The Pārijāta Tree
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.
