--- a/01_agama/madhyama/MA_004.md
+++ b/01_agama/madhyama/MA_004.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Medium Discourses | Chapter 1: Sevens | 4. The Water Parable'
+title: 'The Medium Discourses | Chapter 1: The Sevens | 4. The Water Parable'
 type: kramdown
 base: ../../../
 previous: MA_003.html
@@ -8,7 +8,7 @@ next: MA_005.html
 ---
 
 # [The Medium Discourses](index.html)
-## Chapter 1: Sevens
+## Chapter 1: The Sevens
 ### 4. The Water Parable
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.
