--- a/01_agama/madhyama/MA_007.md
+++ b/01_agama/madhyama/MA_007.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Medium Discourses | Chapter 1: Sevens | 7. Worldly Merit'
+title: 'The Medium Discourses | Chapter 1: The Sevens | 7. Worldly Merit'
 type: kramdown
 base: ../../../
 previous: MA_006.html
@@ -8,7 +8,7 @@ next: MA_008.html
 ---
 
 # [The Medium Discourses](index.html)
-## Chapter 1: Sevens
+## Chapter 1: The Sevens
 ### 7. Worldly Merit
 
 1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to Kauśāmbī and stayed at Ghoṣila’s Park.[\[2\]](#n2){: #ref2}
