--- a/01_agama/madhyama/MA_008.md
+++ b/01_agama/madhyama/MA_008.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Medium Discourses | Chapter 1: Sevens | 8. Seven Suns'
+title: 'The Medium Discourses | Chapter 1: The Sevens | 8. Seven Suns'
 type: kramdown
 base: ../../../
 previous: MA_007.html
@@ -8,7 +8,7 @@ next: MA_009.html
 ---
 
 # [The Medium Discourses](index.html)
-## Chapter 1: Sevens
+## Chapter 1: The Sevens
 ### 8. Seven Suns
 
 1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to Vaiśālī and stayed at the mango grove there.[\[2\]](#n2){: #ref2}
