--- a/01_agama/madhyama/MA_009.md
+++ b/01_agama/madhyama/MA_009.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Medium Discourses | Chapter 1: Sevens | 9. Seven Chariots'
+title: 'The Medium Discourses | Chapter 1: The Sevens | 9. Seven Chariots'
 type: kramdown
 base: ../../../
 previous: MA_008.html
@@ -8,7 +8,7 @@ next: MA_010.html
 ---
 
 # [The Medium Discourses](index.html)
-## Chapter 1: Sevens
+## Chapter 1: The Sevens
 ### 9. Seven Chariots
 
 1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the city Rājagṛha and stayed at Veḷuvana monastery.[\[2\]](#n2){: #ref2}
