--- a/01_agama/madhyama/MA_010.md
+++ b/01_agama/madhyama/MA_010.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Medium Discourses | Chapter 1: Sevens | 10. Ending the Contaminants'
+title: 'The Medium Discourses | Chapter 1: The Sevens | 10. Ending the Contaminants'
 type: kramdown
 base: ../../../
 previous: MA_009.html
@@ -8,7 +8,7 @@ next: MA_011.html
 ---
 
 # [The Medium Discourses](index.html)
-## Chapter 1: Sevens
+## Chapter 1: The Sevens
 ### 10. Ending the Contaminants
 
 1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to Kuru and was staying at the Kuru town of Kalmāṣadamya.[\[2\]](#n2){: #ref2}
