--- a/01_agama/madhyama/MA_098.md
+++ b/01_agama/madhyama/MA_098.md
@@ -1,14 +1,14 @@
 ---
 layout: default
-title: 'The Medium Discourses | Chapter 9: Cause | 98. The Abodes of Mindfulness'
+title: 'The Medium Discourses | Chapter 9: Causation | 98. The Abodes of Mindfulness'
 type: kramdown
 base: ../../../
-previous: MA_085.html
+previous: MA_092.html
 next: MA_101.html
 ---
 
 # [The Medium Discourses](index.html)
-## Chapter 9: Cause
+## Chapter 9: Causation
 ### 98. The Abodes of Mindfulness
 
 1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to Kuru and stayed at the Kuru town of Kalmāṣadamya.
