--- a/01_agama/madhyama/MA_101.md
+++ b/01_agama/madhyama/MA_101.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Medium Discourses | Chapter 9: Cause | 101. Progressive Mental States'
+title: 'The Medium Discourses | Chapter 9: Causation | 101. Progressive Mental States'
 type: kramdown
 base: ../../../
 previous: MA_098.html
@@ -8,7 +8,7 @@ next: MA_127.html
 ---
 
 # [The Medium Discourses](index.html)
-## Chapter 9: Cause
+## Chapter 9: Causation
 ### 101. Progressive Mental States
 
 1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.
