--- a/01_agama/madhyama/MA_127.md
+++ b/01_agama/madhyama/MA_127.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Medium Discourses | Chapter 11: Great | 127. Fields of Merit'
+title: 'The Medium Discourses | Chapter 11: The Greats | 127. Fields of Merit'
 type: kramdown
 base: ../../../
 previous: MA_101.html
@@ -8,7 +8,7 @@ next: MA_146.html
 ---
 
 # [The Medium Discourses](index.html)
-## Chapter 11: Great
+## Chapter 11: The Greats
 ### 127. Fields of Merit
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.
