--- a/01_agama/madhyama/MA_200.md
+++ b/01_agama/madhyama/MA_200.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Medium Discourses | Chapter 16: The Great (2) | 200. Ariṣṭa'
+title: 'The Medium Discourses | Chapter 16: The Greats (2) | 200. Ariṣṭa'
 type: kramdown
 base: ../../
 previous: MA_186.html
@@ -8,7 +8,7 @@ next: MA_204.html
 ---
 
 # [The Medium Discourses](index.html)
-## Chapter 16: The Great (2)
+## Chapter 16: The Greats (2)
 ### 200. Ariṣṭa
 
 1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
