--- a/01_agama/madhyama/MA_095.md
+++ b/01_agama/madhyama/MA_095.md
@@ -4,7 +4,7 @@ title: 'The Medium Discourses | Chapter 8: Defilement | 95. Abiding in Qualities
 type: kramdown
 base: ../../../
 previous: MA_092.html
-next: MA_098.html
+next: MA_096.html
 ---
 
 <h1><a href='index.html'>The Medium Discourses</a></h1>
@@ -39,7 +39,7 @@ next: MA_098.html
   </tr>
   <tr>
     <td title='t125.2.577b26'>「若比丘觀時，則知： 『我多行增伺⋯瞋恚心⋯睡眠纏⋯調貢高⋯疑惑⋯身諍⋯穢污心⋯不信⋯懈怠⋯無念⋯無定⋯多行惡慧者。』 彼比丘欲滅此惡不善法故，便以速求方便，學極精勤。 正念、正智，忍不令退。 猶人為火燒頭、燒衣，急求方便救頭、救衣。 如是，比丘欲滅此惡不善法故，便以速求方便，學極精勤。 正念、正智，忍不令退。</td>
-    <td id='p7'>7. “Suppose that when he contemplates this, a monk knows, ‘I often practice with longing … hateful thoughts … wrapped in sleepiness … agitated arrogance … perplexity … physical violence … filthy thoughts … unfaithfully … laziness … without mindfulness … while unsettled … often practice with poor wisdom.’ Because he want to cease these bad and unskillful things, that monk then quickly pursues the method to do that, training with the utmost effort. He endures and doesn’t let himself retreat using right mindfulness and knowledge. He’s like a man with his hair or clothes on fire who instantly seeks to put them out. Thus, because he wants to cease these bad and unskillful things, this monk quickly pursues the method to do that and trains with the utmost effort. He endures and doesn’t let himself retreat using right mindfulness and knowledge.</td>
+    <td id='p7'>7. “Suppose that when he contemplates this, a monk knows, ‘I often practice with longing … hateful thoughts … wrapped in sleepiness … agitated arrogance … perplexity … physical violence … filthy thoughts … unfaithfully … laziness … without mindfulness … while unsettled … often practice with poor wisdom.’ Because he wants to cease these bad and unskillful things, that monk then quickly pursues the method to do that, training with the utmost effort. He endures and doesn’t let himself retreat using right mindfulness and knowledge. He’s like a man with his hair or clothes on fire who instantly seeks to put them out. Thus, because he wants to cease these bad and unskillful things, this monk quickly pursues the method to do that and trains with the utmost effort. He endures and doesn’t let himself retreat using right mindfulness and knowledge.</td>
   </tr>
   <tr>
     <td title='t125.2.577c4'>「若比丘觀時，則知： 『我多行無貪伺⋯無瞋恚心⋯無睡眠纏⋯無調貢高⋯無疑惑⋯無身諍⋯無穢污心⋯有信⋯有進⋯有念⋯有定⋯多行無惡慧者。』 彼比丘欲住此善法，不忘、不退修行廣布故，便以速求方便，學極精勤。 正念、正智，忍不令退。 猶人為火燒頭、燒衣，急求方便救頭、救衣。 如是，比丘欲住此善法，不忘、不退修行廣布故，便以速求方便，學極精勤。 正念、正智，忍不令退。」</td>
@@ -56,7 +56,7 @@ next: MA_098.html
 <h3 id="notes">Notes</h3>
 
 <ol>
-<li id="n1">For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0577b02" target="_blank">T26.1.577b2-c13</a>. It’s parallel with <a href="https://suttacentral.net/an10.53" target="_blank">AN 10.53</a>. These two texts are quite similar. [<a href="#ref1">back</a>]</li>
+<li id="n1">For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0577b02" target="_blank">T26.1.577b2-c13</a>. It’s parallel with <a href="https://suttacentral.net/an10.53" target="_blank">AN 10.53</a>. These two texts are quite similar to <a href="MA_096.html" target="_blank">MĀ 96</a> and <a href="https://suttacentral.net/an10.55" target="_blank">AN 10.55</a>. [<a href="#ref1">back</a>]</li>
 <li id="n2"><em>discuss</em>. C. 說, P. <em>vaṇṇayāmi</em>. In AN 10.53, the Buddha says he doesn’t praise abiding or retreating, but only growth in skillful qualities, whereas here he simply announces three topics that he’ll discuss for the monks. The C. could well translate the same word as the P. because <em>vaṇṇayāmi</em> can mean “comment on, interpret, explain” or “praise, extol.” AN 10.53 indicates the latter reading by negating the verb for the undesireable topics. This looks like an example of a single word being interpreted differently by separate traditions or dialects and the context being shaped to accomodate the chosen reading.<br/>
 <em>in skillful qualities</em>. While the C. could be read as “good Dharma,” AN 10.53 reads <em>kusalesu dhammesu</em>, which is in the plural locative case. The list of character traits that will follows also confirms that this is the correct reading. [<a href="#ref2">back</a>]</li>
 <li id="n3"><em>faith, precepts, learning, generosity, wisdom, and eloquence, scriptures, and his attainments</em>. C. 篤信、禁戒、博聞、布施、智慧、辯才、阿含、及其所得, P. <em>saddhā sīla suta cāga paññā paṭibhāna</em>. This C. list is the same set of skillful qualities given in the definition of “knowing oneself” in <a href="MA_001.html" target="_blank">MĀ 1</a>. The list found in AN 10.53 is “faith, ethics, generosity, wisdom, and eloquence,” and <a href="https://suttacentral.net/an7.68" target="_blank">AN 7.68</a> is the same except for the addition of “learning.” In general, the MĀ parallels have added two items: “scriptures” (<em>āgama</em>) and “attainments.” [<a href="#ref3">back</a>]</li>
