--- a/01_agama/madhyama/MA_001.md
+++ b/01_agama/madhyama/MA_001.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Medium Discourses | Chapter 1: The Sevens | 1. The Good Dharma'
+title: 'The Medium Discourses | Chapter 1: The Sevens | 1. Skillful Qualities'
 type: kramdown
 base: ../../../
 previous: index.html
@@ -9,12 +9,12 @@ next: MA_002.html
 
 # [The Medium Discourses](index.html)
 ## Chapter 1: The Sevens
-### 1. The Good Dharma
+### 1. Skillful Qualities
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “If a monk accomplishes seven things, then he’ll attain the happiness of the noble ones, and he’ll be rightly headed for the end of the contaminants. What are the seven? A monk knows the teaching, knows the meaning, knows the time, knows moderation, knows himself, knows the community, and knows the superiority of people.
+2\. It was then that the Bhagavān addressed the monks, “If a monk accomplishes seven qualities, then he’ll attain the happiness of the noble ones, and he’ll be rightly headed for the end of the contaminants. What are the seven? A monk knows the teaching, knows the meaning, knows the time, knows moderation, knows himself, knows the community, and knows the superiority of people.
 {:#p2}
 
 #### Knowing the Teaching
@@ -122,7 +122,8 @@ next: MA_002.html
 
 ### Notes
 
-1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0421a12" target="_blank">T26.1.421a12-2a17</a>. An alternative reading of this <em>sūtra</em>’s title is “Good Qualities.” Parallels include <a href="https://suttacentral.net/an7.68" target="_blank">AN 7.68</a>, EĀ 39.1, T27, and a quotation in the <em>Abhidharma Saṃgītiparyāya</em> (T1536.437b18-c10). [\[back\]](#ref1)
+1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0421a12" target="_blank">T26.1.421a12-2a17</a>. The correct reading of this <em>sūtra</em>’s title would appear to be “Skillful Qualities” given the occurrence of 善法 in <a href="MA_095.html" target="_blank">MĀ 95</a>, which has a list of skillful qualities as its subject. Here, we have another such list of skillful qualities that make one a competent renunciate.<br/>
+Direct parallels include <a href="https://suttacentral.net/an7.68" target="_blank">AN 7.68</a>, EĀ 39.1, T27, and a quotation in the <em>Abhidharma Saṃgītiparyāya</em> (<a href="https://cbetaonline.dila.edu.tw/zh/T26n1536_p0437b18" target="_blank">T1536.26.437b18-c10</a>). [\[back\]](#ref1)
 2. {:#n2} This is the traditional list of twelve (sometimes nine) types of <em>sūtra</em>s found in Indian Buddhist sources. Deciphering the precise order of this list is a challenge because Saṃghadeva translates all but one item (<em>gāthā</em>), and the order varies from source to source. Using the traditional S. interpretations of <em>itivṛttaka</em>, <em>vyākaraṇa</em>, and <em>udāna</em> as clues, I arrive at this list: S. <em>sūtra</em>, <em>geya</em>, <em>vyākaraṇa</em>, <em>gāthā</em>, <em>nidāna</em>, <em>itivṛttaka</em>, <em>avadāna</em>, <em>udāna</em>, <em>jātaka</em>, <em>vaipulya</em>, <em>adbhuta-dharma</em>, and <em>upadeśa</em>. [\[back\]](#ref2)
 3. {:#n3} This passage is cryptic. A parallel passage in Xuanzang’s translation of the <em>Abhidharma Saṃgītiparyāya</em> (T1536.437b24-26) reads: “This is a time he should cultivate calm appearances … active appearances … indifferent appearances” (謂此時應修止相⋯舉相⋯捨相等). This seems to refer to a monk’s disposition or daily activities. I’ve translated the passage here in terms of social position. [\[back\]](#ref3)
 4. {:#n4} <em>relieving himself</em>. C. 大小便. The Chinese expression is a euphemism for defecating and urinating. [\[back\]](#ref4)
