--- a/01_agama/madhyama/MA_159.md
+++ b/01_agama/madhyama/MA_159.md
@@ -185,7 +185,7 @@ next: MA_176.html
 
 <ol>
 <li id="n1">For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0681c25" target="_blank">T26.1.681c25-2b9</a>. It has no known parallel among Buddhist sources, nor have I found any occurrence of the priest who appears as the Buddha’s interlocutor. However, there is a very similar passage in the <cite>Br̥hadāraṇyaka Upaniṣad</cite> (@ <a href="https://upanishads.org.in/upanishads/12/3/6/1" target="_blank">3.6.1</a>) in which Gargi questions Yajnavalkya in a very similar way as Agrahana questions the Buddha here in this <em>sūtra</em>. The similarity is difficult to dismiss, but it’s also difficult to determine which might be the original and which was the tradition influenced by it. It could certainly be viewed as a Buddhist response that places Nirvāṇa in the position of Yajnavalkya’s unknowable Brahma. See the notes below for more discussion of this parallel. [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>Agrahana</em>. C. 阿伽羅訶那 (EMC. a-gɪă-la-ha-na = Pr. <em>grahana</em> or <em>garahana</em>). The only evidence of the meaning or original Indic word for this transliterated name is the EMC reconstruction and a gloss in the 翻梵語 (@ <a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p1014b11" target="_blank">T2130.54.1014b11</a>). The gloss says that the translit. should be amended to 阿他訶那 and that it meant 无熱 (“no burning”). This would indicate S. <em>adāhana</em> (“not reduced to ashes”). Unfortunately, this seems a case of the glossary compiler being ignorant of the Pr. readings in the original Āgama text and suggesting speculative corrections based on later S.<br/> 
+<li id="n2"><em>Agrahana</em>. C. 阿伽羅訶那 (EMC. a-gɪă-la-ha-na = Pr. <em>agrahana</em> or <em>agarahana</em>). The only evidence of the meaning or original Indic word for this transliterated name is the EMC reconstruction and a gloss in the 翻梵語 (@ <a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p1014b11" target="_blank">T2130.54.1014b11</a>). The gloss says that the translit. should be amended to 阿他訶那 and that it meant 无熱 (“no burning”). This would indicate S. <em>adāhana</em> (“not reduced to ashes”). Unfortunately, this seems a case of the glossary compiler being ignorant of the Pr. readings in the original Āgama text and suggesting speculative corrections based on later S.<br/> 
 Setting this suggestion aside, it also seems plausible that the name could have been S. <em>Āgrahāyaṇa</em> (the name of a month), <em>Agṛhana</em> (“without a house”), or <em>Agarhana</em> (“without reproach”), all of which might resolve to G. <em>agrahana</em> or <em>agarahana</em>. I have adopted Agrahana for this translation, but the exact name in the original remains unclear to me without an Indic parallel or a more plausible gloss of its meaning. [<a href="#ref2">back</a>]</li>
 <li id="n3">In the Upaniṣad parallel, the progression begins: “all this” is pervaded by water, which is pervaded by air, which is pervaded by the sky, which is pervaded by the world of <em>gandharva</em>s, which is pervaded by the world of the sun, which is pervaded by the world of the moon. [<a href="#ref3">back</a>]</li>
 <li id="n4"><em>Paranirmāṇarati</em>. C. 他化樂. The usual name for this heaven was S. <em>paranirmita-vaśavartin</em>. Here, the C. trans. clearly is <em>para</em> (他) <em>nirmāṇa</em> (化) <em>rati</em> (樂), which is the same as the previous heaven with “other” (<em>para</em>, 他) added as a prefix. The meaning would be “Heaven of Pleasures Created by Others.” [<a href="#ref4">back</a>]</li>
