Fixed the links to translations in SA 35 that weren't updated with filenames changed.

--- a/01_agama/samyukta/35/SA35_40-42.md
+++ b/01_agama/samyukta/35/SA35_40-42.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 35. Views | 40-42 (154). No Generosity'
 type: kramdown
 base: ../../../
 previous: SA35_7.html
-next: SA35_43.html
+next: SA35_43-45.html
 ---
 
 # [The Related Discourses](../index.html)
