--- a/01_agama/samyukta/35/SA35_43-45.md
+++ b/01_agama/samyukta/35/SA35_43-45.md
@@ -3,8 +3,8 @@ layout: default
 title: 'The Related Discourses | 35. Views | 43-45 (155). No Personal Ability'
 type: kramdown
 base: ../../../
-previous: SA35_40.html
-next: SA35_46.html
+previous: SA35_40-42.html
+next: SA35_46-48.html
 ---
 
 # [The Related Discourses](../index.html)
