--- a/01_agama/samyukta/35/SA35_46-48.md
+++ b/01_agama/samyukta/35/SA35_46-48.md
@@ -3,8 +3,8 @@ layout: default
 title: 'The Related Discourses | 35. Views | 46-48 (156). Materialism'
 type: kramdown
 base: ../../../
-previous: SA35_43.html
-next: SA35_49.html
+previous: SA35_43-45.html
+next: SA35_49-51.html
 ---
 
 # [The Related Discourses](../index.html)
