--- a/01_agama/samyukta/35/SA35_49-51.md
+++ b/01_agama/samyukta/35/SA35_49-51.md
@@ -3,8 +3,8 @@ layout: default
 title: 'The Related Discourses | 35. Views | 49-51 (157). Affliction Has No Cause'
 type: kramdown
 base: ../../../
-previous: SA35_46.html
-next: SA35_52.html
+previous: SA35_46-48.html
+next: SA35_52-54.html
 ---
 
 # [The Related Discourses](../index.html)
