--- a/01_agama/samyukta/35/SA35_52-54.md
+++ b/01_agama/samyukta/35/SA35_52-54.md
@@ -3,8 +3,8 @@ layout: default
 title: 'The Related Discourses | 35. Views | 52-54 (158). Purification Has No Cause'
 type: kramdown
 base: ../../../
-previous: SA35_49.html
-next: SA35_55.html
+previous: SA35_49-51.html
+next: SA35_55-57.html
 ---
 
 # [The Related Discourses](../index.html)
