--- a/01_agama/samyukta/35/SA35_55-57.md
+++ b/01_agama/samyukta/35/SA35_55-57.md
@@ -3,8 +3,8 @@ layout: default
 title: 'The Related Discourses | 35. Views | 55-57 (159). Lack of Knowing and Seeing Has No Cause'
 type: kramdown
 base: ../../../
-previous: SA35_52.html
-next: SA35_58.html
+previous: SA35_52-54.html
+next: SA35_58-60.html
 ---
 
 # [The Related Discourses](../index.html)
