--- a/01_agama/samyukta/35/SA35_61-63.md
+++ b/01_agama/samyukta/35/SA35_61-63.md
@@ -3,8 +3,8 @@ layout: default
 title: 'The Related Discourses | 35. Views | 61-63 (161). Materialism'
 type: kramdown
 base: ../../../
-previous: SA35_58.html
-next: SA35_64.html
+previous: SA35_58-60.html
+next: SA35_64-66.html
 ---
 
 # [The Related Discourses](../index.html)
