--- a/01_agama/samyukta/35/SA35_64-66.md
+++ b/01_agama/samyukta/35/SA35_64-66.md
@@ -3,8 +3,8 @@ layout: default
 title: 'The Related Discourses | 35. Views | 64-66 (162). Nihilism'
 type: kramdown
 base: ../../../
-previous: SA35_61.html
-next: SA35_67.html
+previous: SA35_61-63.html
+next: SA35_67-69.html
 ---
 
 # [The Related Discourses](../index.html)
