--- a/01_agama/samyukta/35/SA35_7.md
+++ b/01_agama/samyukta/35/SA35_7.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 35. Views | 7 (139). The Cause of Attachment an
 type: kramdown
 base: ../../../
 previous: SA35_1.html
-next: SA35_40.html
+next: SA35_40-42.html
 ---
 
 # [The Related Discourses](../index.html)
