--- a/01_agama/samyukta/35/SA35_58-60.md
+++ b/01_agama/samyukta/35/SA35_58-60.md
@@ -3,8 +3,8 @@ layout: default
 title: 'The Related Discourses | 35. Views | 58-60 (160). Knowledge and Vision Has No Cause'
 type: kramdown
 base: ../../../
-previous: SA35_55.html
-next: SA35_61.html
+previous: SA35_55-57.html
+next: SA35_61-63.html
 ---
 
 # [The Related Discourses](../index.html)
