--- a/01_agama/samyukta/35/SA35_67-69.md
+++ b/01_agama/samyukta/35/SA35_67-69.md
@@ -3,7 +3,7 @@ layout: default
 title: 'The Related Discourses | 35. Views | 67-69 (163). Birth and Death Is Predetermined'
 type: kramdown
 base: ../../../
-previous: SA35_64.html
+previous: SA35_64-66.html
 next: ../36/index.html
 ---
 
