Finally learned how to spell "piece" correctly.

--- a/01_agama/ekottarika/12/EA_12_05.md
+++ b/01_agama/ekottarika/12/EA_12_05.md
@@ -36,7 +36,7 @@ next: EA_12_06.html
 8\. “Those who praise living in uninhabited places have praised me. Why is that? I’m always praising those who live in uninhabited places. Those who slander someone for living in an uninhabited place have slandered me.
 {:#p8}
 
-9\. “Those who praise wearing the five-peice robe have praised me. Why is that? I’m always praising those who wear five-piece robes. Those who slander someone for wearing the five-peice robe have slandered me.
+9\. “Those who praise wearing the five-piece robe have praised me. Why is that? I’m always praising those who wear five-piece robes. Those who slander someone for wearing the five-piece robe have slandered me.
 {:#p9}
 
 10\. “Those who praise keeping three garments have praised me. Why is that? I’m always praising those who keep three garments. Those who slander someone for keeping three garments have slandered me.
