--- a/01_agama/samyukta/01/SA1_178.md
+++ b/01_agama/samyukta/01/SA1_178.md
@@ -147,7 +147,7 @@ next: ../02/index.html
   </tr>
   <tr>
     <td title='t99.2.36a15'>時，有金剛力鬼神持金剛杵，猛火熾然在虛空中。 臨薩遮尼犍子頭上，作是言： 「世尊再三問！ 汝何故不答？ 我當以金剛杵碎破汝頭，令作七分。」</td>
-    <td id='p24'>24. There was then a <em>vajra</em> warrior <em>yakṣa</em> spirit<sup id="ref12"><a href="#n12">12</a></sup> wielding a <em>vajra</em> hammer that hovered in the sky while fully engulfed in flames. It was right over Satyaka’s head when it said, “The Bhagavān has questioned you three times. Why haven’t you answered him? I’m going to smash your head into seven peices with this <em>vajra</em> hammer!”</td>
+    <td id='p24'>24. There was then a <em>vajra</em> warrior <em>yakṣa</em> spirit<sup id="ref12"><a href="#n12">12</a></sup> wielding a <em>vajra</em> hammer that hovered in the sky while fully engulfed in flames. It was right over Satyaka’s head when it said, “The Bhagavān has questioned you three times. Why haven’t you answered him? I’m going to smash your head into seven pieces with this <em>vajra</em> hammer!”</td>
   </tr>
   <tr>
     <td title='t99.2.36a18'>佛神力故，唯令薩遮尼犍子見金剛神。 餘眾不見。 薩遮尼犍子得大恐怖，白佛言： 「不爾，瞿曇！」</td>
@@ -392,7 +392,7 @@ We can see, though, that at least the example of an elephant must date back to s
 In the C., the subject for 生 is left understood, leaving it open to be read as either form or the person as the creator of good and evil. The natural reading is to carry the subject from the previous clause forward, meaning that 色 is the subject again. [<a href="#ref10">back</a>]</li>
 <li id="n11"><em>Yes, Gautama. Form is a person’s self.</em> C. 如是，瞿曇。色是我人, P. <em>Ahañhi, bho gotama, evaṁ vadāmi: ‘rūpaṁ me attā</em>. In the P. parallel, there is a rhetorical equation between <em>purisapuggala</em> (“a man’s person”) and the pronoun <em>me</em> (“me, my”) that doesn’t happen here in the C. This is of interest because among Buddhists there was a rejection of the concept of <em>pudgala</em> as a substitute for S. <em>atma</em>.<br/>
 In both cases, this argument would appear to be commenting on something other than Jain philosophy, since among Jains <em>pudgala</em> meant matter in general and was a synonym of <em>rūpa</em> among Buddhists. It is not given the specific meaning of a person in extant Jain texts. Jains, like Buddhists, held that the corporeal existence was a problem from which the practitioner needed to be liberated, so it makes little sense that a Jain disciple is depicted as identifying it with the soul or self. [<a href="#ref11">back</a>]</li>
-<li id="n12"><em>vajra warrior</em> yakṣa. C. 金剛力鬼神, P. <em>vajirapāṇi yakkha</em>. The usu. C. translation is 力士 (“strong man” or “warrior”), and an alt. reading adds 士 here. This character makes similar appearances in other debate <em>sūtra</em>s in which an opponent refuses to admit that the Buddha is correct. The threat of having one’s head split in seven peices became a repeated trope not always associated with this spirit, but the threat is never carried out. It served to overcome a man’s pride when it prevents him from admitting that he is wrong.<br/>
+<li id="n12"><em>vajra warrior</em> yakṣa. C. 金剛力鬼神, P. <em>vajirapāṇi yakkha</em>. The usu. C. translation is 力士 (“strong man” or “warrior”), and an alt. reading adds 士 here. This character makes similar appearances in other debate <em>sūtra</em>s in which an opponent refuses to admit that the Buddha is correct. The threat of having one’s head split in seven pieces became a repeated trope not always associated with this spirit, but the threat is never carried out. It served to overcome a man’s pride when it prevents him from admitting that he is wrong.<br/>
 In the <cite>Dīrgha Āgama</cite>, this spirit is called 密迹力士 (“concealed tracks warrior”), where 密迹 likely translated S. <em>guhyaka</em> or <em>guhyapāda</em>. <em>Guhyaka</em> appear to be a class of <em>yakṣa</em> spirits in the service of the god king Vaiśravaṇa in some Buddhist myths. S. <em>vajrapāṇi</em> in that case is an epithet or dscription of this guardian spirit rather than his name, as it does here. It seems that this epithet became the spirit’s name in P. sources. [<a href="#ref12">back</a>]</li>
 <li id="n13">At this point, MN 35 appears to equate the five aggregates to suffering directly, whereas here it is desire for them that brings about suffering, which is more consistent with other EBTs. [<a href="#ref13">back</a>]</li>
 <li id="n14">This metaphor is missing from MN 35, perhaps because it depicts the aggregates (the child) as being one thing and a person (the man) as something else. Again, it’s attachment that creates suffering in this argument. [<a href="#ref14">back</a>]</li>
