--- a/01_agama/ekottarika/13/EA_13_01.md
+++ b/01_agama/ekottarika/13/EA_13_01.md
@@ -14,10 +14,10 @@ next: ../13/EA_13_02.html
 1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Someone taking profit is a serious thing, not an easy thing, for it prevents a person from reaching the unconditioned state. Why is that? If that monk Surādha[\[1\]](#n1){:#ref1} hadn’t been greedy for profit, he never would have renounced the three Dharma robes and returned to being a householder. The monk Surādha had been a great forest-dweller who solicited alms when the time arrived. He would dwell in one place for one sitting, and he sometimes ate at midday. He would sit under a tree or on open ground, and he was happy living in a secluded placed. He wore the five-peice robe, and sometimes he kept three garments. Sometimes, he enjoyed being in a charnel ground. He applied himself to such hardship as he performed these ascetic practices.
+2\. It was then that the Bhagavān addressed the monks, “Someone taking profit is a serious thing, not an easy thing, for it prevents a person from reaching the unconditioned state. Why is that? If that monk Surādha[\[1\]](#n1){:#ref1} hadn’t been greedy for profit, he never would have renounced the three Dharma robes and returned to being a householder. The monk Surādha had been a great forest-dweller who solicited alms when the time arrived. He would dwell in one place for one sitting, and he sometimes ate at midday. He would sit under a tree or on open ground, and he was happy living in a secluded placed. He wore the five-piece robe, and sometimes he kept three garments. Sometimes, he enjoyed being in a charnel ground. He applied himself to such hardship as he performed these ascetic practices.
 {:#p2}
 
-3\. “But then, the monk Surādha always accepted gifts when the King summoned him, who provided meals of a hundred flavors on the days that he came. That monk’s mind became attached to these meals, and he eventually abandoned the forest-dwelling life, soliciting alms when the time arrived, dwelling in one place for one sitting, eating at midday, sitting under a tree or on open ground, living in a secluded place, wearing the five-peice robe, sometimes keeping three garments, sometimes enjoying being in a charnel ground, and applying oneself to these hardships. Once he had abandoned these things completely, he left behind the three Dharma garments and returned to wearing white clothes. He became a butcher of cattle, killing an inestimable number of beings. He was born in Hell when his body broke up and his life ended.
+3\. “But then, the monk Surādha always accepted gifts when the King summoned him, who provided meals of a hundred flavors on the days that he came. That monk’s mind became attached to these meals, and he eventually abandoned the forest-dwelling life, soliciting alms when the time arrived, dwelling in one place for one sitting, eating at midday, sitting under a tree or on open ground, living in a secluded place, wearing the five-piece robe, sometimes keeping three garments, sometimes enjoying being in a charnel ground, and applying oneself to these hardships. Once he had abandoned these things completely, he left behind the three Dharma garments and returned to wearing white clothes. He became a butcher of cattle, killing an inestimable number of beings. He was born in Hell when his body broke up and his life ended.
 {:#p3}
 
 4\. “Therefore, monks, you should know from this that profit is a serious thing, for it prevents a person from reaching the unsurpassed and true awakening. If thoughts of profit have yet to arise, they should be controlled and prevented from arising. If they’ve already arisen, work to make them cease. Thus, monks, you should train yourselves.”
