Missed capitalized "Peice" - corrected

--- a/01_agama/madhyama/MA_012.md
+++ b/01_agama/madhyama/MA_012.md
@@ -71,7 +71,7 @@ next: MA_013.html
   </tr>
   <tr>
     <td title='t26.1.434c9'>「猶如惒破，因樹有影。 若使有人持利斧來斫彼樹根。 段段斬截，破為十分，或為百分。 火燒成灰。 或大風吹，或著水中。 於惒破意云何？ 影因樹有。 彼影，從是已絕其因，滅不生耶？」</td>
-    <td id='p13'>13. “Vāṣpa, it’s like a tree that causes a shadow to be cast. Suppose someone comes and chops that tree down at its root with a sharp axe. Peice by piece, they gradually chop it up, chopping it into ten or a hundred pieces. Then, they burn it until it’s reduced to ash. It might be blown away in the wind or dumped in a river. What do you think, Vāṣpa? That shadow had existed because of the tree. Would it cease and not arise again as a result of its cause having ended?”</td>
+    <td id='p13'>13. “Vāṣpa, it’s like a tree that causes a shadow to be cast. Suppose someone comes and chops that tree down at its root with a sharp axe. Piece by piece, they gradually chop it up, chopping it into ten or a hundred pieces. Then, they burn it until it’s reduced to ash. It might be blown away in the wind or dumped in a river. What do you think, Vāṣpa? That shadow had existed because of the tree. Would it cease and not arise again as a result of its cause having ended?”</td>
   </tr>
   <tr>
     <td title='t26.1.434c13'>惒破答曰： 「如是，瞿曇。」</td>
